--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1"
   },
